--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.9.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-lottie-player": "^2.1.0",
