--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-joyride": "^2.9.3",
     "react-lottie-player": "^2.1.0",
     "react-player": "^2.16.0",
     "react-router-dom": "6.24.1",
